--- a/XAI/Base.lproj/NewLauch.storyboard
+++ b/XAI/Base.lproj/NewLauch.storyboard
@@ -36,7 +36,7 @@
                                 <rect key="frame" x="120" y="533" width="81" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.53041934967041016" green="0.53040343523025513" blue="0.53041249513626099" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
