--- a/XAI/Base.lproj/InfBtnView.xib
+++ b/XAI/Base.lproj/InfBtnView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -8,11 +8,22 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="YRA-PT-2AO" customClass="XAIInfBtn">
-            <rect key="frame" x="0.0" y="0.0" width="260" height="160"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" id="VXc-1G-gqA">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="power_tip.png" id="y3V-BR-oNj">
+                            <rect key="frame" x="10" y="10" width="300" height="11"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
                 <view contentMode="scaleToFill" id="HZJ-en-InA">
-                    <rect key="frame" x="0.0" y="23" width="260" height="115"/>
+                    <rect key="frame" x="30" y="23" width="260" height="115"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="g1l-7p-99W" userLabel="edit">
@@ -91,7 +102,7 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="红外" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="q5w-nt-9Lo">
-                    <rect key="frame" x="0.0" y="2" width="260" height="30"/>
+                    <rect key="frame" x="30" y="2" width="260" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -99,13 +110,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入备注" textAlignment="center" minimumFontSize="17" id="rv5-kG-u2h">
-                    <rect key="frame" x="0.0" y="2" width="260" height="30"/>
+                    <rect key="frame" x="30" y="2" width="260" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="操作时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b2b-hr-ME7">
-                    <rect key="frame" x="0.0" y="139" width="260" height="21"/>
+                    <rect key="frame" x="30" y="139" width="260" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -129,6 +140,7 @@
                 <outlet property="nor2ImgView" destination="UIq-RS-AEn" id="Gwb-Q1-qp6"/>
                 <outlet property="nor3ImgView" destination="zbN-zH-WAE" id="shU-M5-LGC"/>
                 <outlet property="oprTipLab" destination="b2b-hr-ME7" id="QP9-3N-f2A"/>
+                <outlet property="powerView" destination="VXc-1G-gqA" id="B8Y-Kn-QuM"/>
                 <outlet property="statusTipImgView" destination="Bdx-ul-tlO" id="3U8-aq-tfq"/>
                 <outlet property="waitRollImageView" destination="dzK-Hu-tPw" id="E8l-Ln-Ycs"/>
                 <outlet property="waitView" destination="cjI-TI-acx" id="y6d-7P-NeJ"/>
@@ -144,8 +156,9 @@
         <image name="inf_nor_2.png" width="140" height="140"/>
         <image name="inf_nor_3.png" width="140" height="140"/>
         <image name="inf_unk.png" width="140" height="140"/>
-        <image name="switch_wait_rol.png" width="28" height="28"/>
-        <image name="switch_wait_tip.png" width="28" height="28"/>
+        <image name="power_tip.png" width="299" height="11"/>
+        <image name="switch_wait_rol.png" width="26" height="26"/>
+        <image name="switch_wait_tip.png" width="26" height="26"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
